--- a/age-calculator-app/src/assets/style.css
+++ b/age-calculator-app/src/assets/style.css
@@ -4,7 +4,31 @@
 
 @font-face {
     font-family: "Poppins";
-    src: url("./fonts/Poppins-Italic.ttf"), url("./fonts/Poppins-ExtraBoldItalic.ttf");
+    src: url("./fonts/Poppins-Italic.ttf");
     font-style: italic;
-    font-weight: 400 800;
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Poppins";
+    src: url("./fonts/Poppins-Bold.ttf");
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Poppins";
+    src: url("./fonts/Poppins-ExtraBoldItalic.ttf");
+    font-weight: 800;
+    font-style: italic;
+}
+
+@layer components {
+    .result {
+        @apply font-poppins font-extrabold italic text-6xl
+    }
+
+    .result-number {
+        @apply text-purple
+    }
 }
